[package]
name = "rustem_proxy"
authors = ["Alexander Prokopenko <uaquax@gmail.com>"]
description = "A rust library to set system proxy on different operating systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.51.0", features = ["transactions"] }
winapi = { version = "0.3.9", features = ["wininet"] }

[features]
